# vibe_monitor-back

./: .dockerignore  .env.example  .flake8  .gitignore  .gitleaksignore  .pr_agent.toml  .pre-commit-config.yaml  DEPLOYMENT_MIGRATION.md  Dockerfile  Dockerfile.dev  README.md  SETUP_GUIDE.md  alembic.ini  convert.py  dev_start.sh  dev_stop.sh  docker-compose.dev.yml  docker-compose.yml  entrypoint.sh  final_test.py  kong.yml  otel-collector-config.yaml  package-lock.json  project_flow_diagram.md  promtail-config.yml  pyproject.toml  requirements.txt  start_services.sh  taskdef.json  taskdef.template.json  test_complete_flow.py  test_error_service.py  test_flow_debug.py  test_groq_service.py  test_otel.py  test_otel_logs.py  venv  worker.py
.github/: CODEOWNERS
.github/workflows/: _deploy-ecs.yml  cd.yml  ci.yml  deploy-dev.yml  deploy-prod.yml  deploy.yml  pr_agent.yml  tests.yml
alembic/: env.py
alembic/versions/: 0df147135007_add_github_user_oauth_table.py  12e4bbd5974b_add_is_active_column_to_github_.py  1dc79f90d2d4_add_teams_and_team_membership_tables.py  1e2c84c6db99_add_unique_constraint_installation_id.py  25c346804ff3_merge_llm_provider_config_and_.py  2623c4d56e6e_merge_vib_288_and_vib_291_migrations.py  2b46743bd682_merge_credential_auth_and_integration_.py  3a1525015433_fix_unknown_health_status.py  4347b727b544_add_unique_constraint_to_memberships.py  716ab90ef94b_add_index_on_github_integrations_.py  7ea2ca5ca7f8_add_turn_feedbacks_and_turn_comments_.py  806cf84404f3_add_daily_request_limit_column_to_.py  80ff9d48ddc5_add_security_events_table.py  886ef6687692_merge_github_user_oauth_and_chat_files_.py  9055f8216e50_add_service_health_review_tables.py  91a2a1e77256_remove_feedback_columns_from_chat_turns.py  97d46c4af7dd_update_plan_service_limits.py  a1b2c3d4e5f6_add_integrations_control_plane.py  a1b2c3d4e5f6_migrate_to_weekly_aiu_limits.py  a9f8e7d6c5b4_add_token_hash_for_performance.py  abc123def456_migrate_aws_integration_to_sts_role_based.py  b0f53cfcf12a_initial_schema_baseline.py  b1l2l3i4n5g6_add_billing_tables.py  b2c3d4e5f6a7_add_verification_tables_and_columns.py  b413091d1260_drop_auto_discovery_enabled_column.py  b612ffbe12b8_seed_plans_if_empty.py  b8ff8bf18edd_add_chat_files_table.py  c07a6a7a69ae_add_subscription_schedule_support.py  c1dd6edf73ca_add_newsletter_subscribed_to_users.py  c1h2a3t4_add_chat_tables_and_job_source.py  d3e4f5a6b7c8_rename_legacy_email_indexes.py  d8f3a2b5c1e9_add_content_to_parsed_files.py  d963cf8403c6_migrate_aws_integration_to_sts_role_based.py  e1n2v3s4_add_environments_tables.py  e8f9a2b3c4d5_add_newrelic_integrations_table.py  eb279001df3c_add_credential_authentication.py  f1a2b3c4d5e6_add_datadog_integrations_table.py  f1x3num5_fix_enum_case_mismatch.py  f8f458133678_add_deployment_tracking_and_workspace_.py  g1h2i3j4k5l6_add_llm_provider_configs_table.py  (+7 more)
alembic/versions/archive/: 0df147135007_add_github_user_oauth_table.py  1e2c84c6db99_add_unique_constraint_installation_id.py  3a1525015433_fix_unknown_health_status.py  4347b727b544_add_unique_constraint_to_memberships.py  (+21 more)
app/: main.py  models.py  otel_processor.py  otel_setup.py  worker.py
app/aws/: __init__.py
app/billing/: __init__.py  models.py  router.py  schemas.py  service.py  stripe_instrumentation.py  webhooks.py
app/chat/: __init__.py  router.py  schemas.py  service.py
app/code_parser/: __init__.py  repository.py  schemas.py  service.py
app/core/: config.py  database.py  db_instrumentation.py  logging_config.py  metrics.py  oauth_state.py  otel_config.py  otel_metrics.py  rca_metrics.py  redis.py  security.py
app/datadog/: __init__.py
app/datasources/: __init__.py  models.py  router.py  service.py
app/deployments/: __init__.py  router.py  schemas.py  service.py
app/email/: router.py  schemas.py  service.py
app/email_service/: __init__.py  router.py  service.py
app/engagement/: __init__.py  router.py  schemas.py  service.py
app/environments/: __init__.py  router.py  schemas.py  service.py
app/grafana/: __init__.py  router.py  schemas.py  service.py
app/health_review_system/: TODO.md  __init__.py  graph.py  llm_budget.py  tools.py
app/incidents/: models.py  router.py  schemas.py
app/ingestion/: batch_processor.py  models.py  otel_collector.py  router.py  schemas.py  service.py
app/integrations/: __init__.py  health_checks.py  router.py  schemas.py  service.py  simple_service.py
app/llm/: __init__.py  providers.py  router.py  schemas.py  service.py
app/log/: __init__.py  models.py  router.py  service.py
app/mailgun/: __init__.py  router.py  schemas.py  service.py
app/metrics/: models.py  router.py  service.py
app/middleware/: __init__.py  http_metrics.py  request_id.py
app/newrelic/: __init__.py
app/onboarding/: models.py  router.py  schemas.py  service.py
app/query/: router.py
app/routers/: errors.py
app/security/: __init__.py  llm_guard.py
app/services/: error_service.py  rca.py
app/slack/: __init__.py  alert_detector.py  models.py  router.py  schemas.py  service.py
app/teams/: __init__.py  router.py  schemas.py  service.py
app/utils/: data_masker.py  rate_limiter.py  retry_decorator.py  token_processor.py  ttl_cache.py
app/workers/: base_worker.py  health_review_worker.py
app/workspace/: schemas.py
demo_user/: index.js  observe.js  package-lock.json  package.json
docs/: DEPLOYMENT_WEBHOOKS.md  FRONTEND_CHAT_INTEGRATION.md  FRONTEND_INTEGRATION.md  JOBS_SYSTEM.md
project-overview/: er-diagram.md  project-structure.md
scripts/: create-worktree.sh  debug-deployment.sh  localstack-init.sh
tests/: conftest.py  test_account_service.py  test_billing.py  test_billing_limits.py  test_datasource_tools.py  test_health_review_api.py  test_incidents.py  test_ingestion.py  test_integration_permissions.py  test_llm_providers.py  test_llm_router.py  test_llm_service.py  test_oauth.py  test_observability.py  test_onboarding.py  test_services.py  test_subscription_lifecycle.py
tests/billing/: __init__.py  test_service_downgrade.py
tests/integration/: conftest.py  test_credential_auth.py
(+331 files in other folders)
